--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,18 +1,15 @@
 <div id="form">
-  <h1>Login</h1>
-  <form action="/signup" method="POST">
-
+  <h2>Login</h2>
+  <form action="/login" method="POST">
     <label> Username
-      <input type="text" name="username" placeholder="ironhacker" />
+      <input type="text" name="username" placeholder="username" />
     </label>
-
-
     <label> Password
       <input type="password" name="password" placeholder="********" />
     </label>
-
-    <button type="submit">Create account</button>
-    
-    {{!-- error message will be added here --}}
+    <button type="submit">Login</button>
+    {{#if errorMessage}}
+      <p class="error">{{errorMessage}}</p>
+    {{/if}}
   </form>
 </div>
