--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,7 +10,14 @@
   </head>
 
   <body>
-
+    {{#if userInSession}}
+    <form action="/logout" method="POST">
+    <button>Logout</button>
+    </form>
+    {{else}}
+    <a href="/signup">Signup</a>
+    <a href="/login">Login</a>
+    {{/if}} 
     {{{body}}}
     <script src="/js/script.js"></script>
   </body>
